# chat-room-extension

./: README.md
backend/: Cargo.toml
backend/migrations/: 20250206224148_initial.down.sql  20250206224148_initial.up.sql
backend/src/: main.rs
backend/src/model/: message.rs  mod.rs  room.rs  user.rs
backend/src/model/sql/: create_message.sql  create_room.sql  create_user.sql
backend/src/routes/: message.rs  room.rs  user.rs
frontend/: manifest.json
frontend/pages/: popup.html
frontend/scripts/: config.template.js  popup.js
frontend/styles/: popup.css
